[gd_scene load_steps=13 format=3 uid="uid://dvkulc8muxc07"]

[ext_resource type="Script" uid="uid://opipfj3qw0ns" path="res://shells/shell.gd" id="1_n3tug"]
[ext_resource type="ArrayMesh" uid="uid://dlc6rmo2xpb5y" path="res://shells/SM_Shell.obj" id="2_wnqlb"]
[ext_resource type="AudioStream" uid="uid://c0qtkv1nqmmt8" path="res://shells/shell-explosion.mp3" id="3_qrk5f"]

[sub_resource type="BoxShape3D" id="BoxShape3D_iskop"]
size = Vector3(0.2, 0.2, 0.6)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qc52f"]
lifetime_randomness = 1.0
emission_shape_scale = Vector3(0.05, 0.05, 0.05)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
velocity_pivot = Vector3(90, 0, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qrk5f"]
transparency = 1
blend_mode = 1
shading_mode = 0
diffuse_mode = 3
albedo_color = Color(0.351563, 0.351563, 0.351563, 1)

[sub_resource type="SphereMesh" id="SphereMesh_djmww"]
material = SubResource("StandardMaterial3D_qrk5f")
radial_segments = 8
rings = 8

[sub_resource type="Curve" id="Curve_ebc1l"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ebc1l"]
curve = SubResource("Curve_ebc1l")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qrk5f"]
emission_shape = 2
emission_sphere_radius = 1.0
spread = 180.0
initial_velocity_min = 1.0
initial_velocity_max = 2.0
gravity = Vector3(0, 0, 0)
scale_min = 0.0
scale_max = 5.0
scale_curve = SubResource("CurveTexture_ebc1l")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_djmww"]
transparency = 1
blend_mode = 1
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.88, 0.234667, 0, 1)
emission_enabled = true
emission = Color(1, 0.939333, 0.09, 1)
emission_energy_multiplier = 0.2

[sub_resource type="SphereMesh" id="SphereMesh_whcxh"]
material = SubResource("StandardMaterial3D_djmww")
radial_segments = 8
rings = 8

[node name="Shell" type="Node3D"]
script = ExtResource("1_n3tug")

[node name="ShellMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1.19249e-08, 0, 1, 0, 1, 0, -1, 0, 1.19249e-08, 0, 0, 0)
mesh = ExtResource("2_wnqlb")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.159639)
collision_layer = 0
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.132329)
shape = SubResource("BoxShape3D_iskop")

[node name="SmokeGPUParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.579616)
amount = 16
lifetime = 3.0
speed_scale = 4.88
randomness = 0.25
process_material = SubResource("ParticleProcessMaterial_qc52f")
draw_pass_1 = SubResource("SphereMesh_djmww")

[node name="BlastGPUParticles" type="GPUParticles3D" parent="."]
emitting = false
amount = 32
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_qrk5f")
draw_pass_1 = SubResource("SphereMesh_whcxh")

[node name="ExplosionAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_qrk5f")
unit_size = 100.0
